// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Performance: metrics evaluates valid input (with image lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 3364,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 3364,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 6354,
  "interactiveTs": undefined,
  "largestContentfulPaint": 5567,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": 5519,
  "lcpLoadStart": 5397,
  "maxPotentialFID": 160,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 2474,
  "observedDomContentLoadedTs": 760623117637,
  "observedFirstContentfulPaint": 2685,
  "observedFirstContentfulPaintAllFrames": 2685,
  "observedFirstContentfulPaintAllFramesTs": 760623328111,
  "observedFirstContentfulPaintTs": 760623328111,
  "observedFirstMeaningfulPaint": 2685,
  "observedFirstMeaningfulPaintTs": 760623328111,
  "observedFirstPaint": 2685,
  "observedFirstPaintTs": 760623328111,
  "observedFirstVisualChange": 2652,
  "observedFirstVisualChangeTs": 760623295599,
  "observedLargestContentfulPaint": 2882,
  "observedLargestContentfulPaintAllFrames": 2882,
  "observedLargestContentfulPaintAllFramesTs": 760623525330,
  "observedLargestContentfulPaintTs": 760623525330,
  "observedLastVisualChange": 3269,
  "observedLastVisualChangeTs": 760623912599,
  "observedLoad": 2697,
  "observedLoadTs": 760623340349,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 760620643599,
  "observedSpeedIndex": 2795,
  "observedSpeedIndexTs": 760623438456,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 760620643599,
  "observedTraceEnd": 4778,
  "observedTraceEndTs": 760625421283,
  "speedIndex": 5546,
  "speedIndexTs": undefined,
  "timeToFirstByte": 2394,
  "timeToFirstByteTs": undefined,
  "totalBlockingTime": 162,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp from all frames) correctly 1`] = `
Object {
  "cumulativeLayoutShift": undefined,
  "cumulativeLayoutShiftMainFrame": undefined,
  "firstContentfulPaint": 863,
  "firstContentfulPaintAllFrames": 683,
  "firstContentfulPaintAllFramesTs": 23466705983,
  "firstContentfulPaintTs": 23466886143,
  "firstMeaningfulPaint": 863,
  "firstMeaningfulPaintTs": 23466886143,
  "interactive": 863,
  "interactiveTs": 23466886143,
  "largestContentfulPaint": 863,
  "largestContentfulPaintAllFrames": 683,
  "largestContentfulPaintAllFramesTs": 23466705983,
  "largestContentfulPaintTs": 23466886143,
  "lcpLoadEnd": undefined,
  "lcpLoadStart": undefined,
  "maxPotentialFID": 16,
  "observedCumulativeLayoutShift": undefined,
  "observedCumulativeLayoutShiftMainFrame": undefined,
  "observedDomContentLoaded": 596,
  "observedDomContentLoadedTs": 23466619325,
  "observedFirstContentfulPaint": 863,
  "observedFirstContentfulPaintAllFrames": 683,
  "observedFirstContentfulPaintAllFramesTs": 23466705983,
  "observedFirstContentfulPaintTs": 23466886143,
  "observedFirstMeaningfulPaint": 863,
  "observedFirstMeaningfulPaintTs": 23466886143,
  "observedFirstPaint": 616,
  "observedFirstPaintTs": 23466639588,
  "observedFirstVisualChange": 609,
  "observedFirstVisualChangeTs": 23466632130,
  "observedLargestContentfulPaint": 863,
  "observedLargestContentfulPaintAllFrames": 683,
  "observedLargestContentfulPaintAllFramesTs": 23466705983,
  "observedLargestContentfulPaintTs": 23466886143,
  "observedLastVisualChange": 5881,
  "observedLastVisualChangeTs": 23471904130,
  "observedLoad": 673,
  "observedLoadTs": 23466696096,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 23466023130,
  "observedSpeedIndex": 1583,
  "observedSpeedIndexTs": 23467605703,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 23466023130,
  "observedTraceEnd": 6006,
  "observedTraceEndTs": 23472029453,
  "speedIndex": 1583,
  "speedIndexTs": 23467606130,
  "timeToFirstByte": 565,
  "timeToFirstByteTs": 23466588051,
  "totalBlockingTime": 0,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 2294,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 2764,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 4607,
  "interactiveTs": undefined,
  "largestContentfulPaint": 2764,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": undefined,
  "lcpLoadStart": undefined,
  "maxPotentialFID": 1336,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 1513,
  "observedDomContentLoadedTs": 713038536140,
  "observedFirstContentfulPaint": 1122,
  "observedFirstContentfulPaintAllFrames": 1122,
  "observedFirstContentfulPaintAllFramesTs": 713038144775,
  "observedFirstContentfulPaintTs": 713038144775,
  "observedFirstMeaningfulPaint": 1122,
  "observedFirstMeaningfulPaintTs": 713038144775,
  "observedFirstPaint": 1122,
  "observedFirstPaintTs": 713038144775,
  "observedFirstVisualChange": 1105,
  "observedFirstVisualChangeTs": 713038128064,
  "observedLargestContentfulPaint": 1122,
  "observedLargestContentfulPaintAllFrames": 1122,
  "observedLargestContentfulPaintAllFramesTs": 713038144775,
  "observedLargestContentfulPaintTs": 713038144775,
  "observedLastVisualChange": 1722,
  "observedLastVisualChangeTs": 713038745064,
  "observedLoad": 2159,
  "observedLoadTs": 713039182071,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 713037023064,
  "observedSpeedIndex": 1393,
  "observedSpeedIndexTs": 713038416494,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 713037023064,
  "observedTraceEnd": 7416,
  "observedTraceEndTs": 713044439102,
  "speedIndex": 3172,
  "speedIndexTs": undefined,
  "timeToFirstByte": 611,
  "timeToFirstByteTs": undefined,
  "totalBlockingTime": 1205,
}
`;

exports[`Performance: metrics evaluates valid input correctly (throttlingMethod=provided) 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 499,
  "firstContentfulPaintAllFrames": 499,
  "firstContentfulPaintAllFramesTs": 225414670885,
  "firstContentfulPaintTs": 225414670885,
  "firstMeaningfulPaint": 783,
  "firstMeaningfulPaintTs": 225414955343,
  "interactive": 1582,
  "interactiveTs": 225415754204,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": undefined,
  "lcpLoadStart": undefined,
  "maxPotentialFID": 198,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintAllFrames": 499,
  "observedFirstContentfulPaintAllFramesTs": 225414670885,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 605,
  "speedIndexTs": 225414777015,
  "timeToFirstByte": 261,
  "timeToFirstByteTs": 225414432704,
  "totalBlockingTime": 48,
}
`;

exports[`Performance: metrics evaluates valid input correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 1337,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 1541,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 3955,
  "interactiveTs": undefined,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": undefined,
  "lcpLoadStart": undefined,
  "maxPotentialFID": 396,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintAllFrames": 499,
  "observedFirstContentfulPaintAllFramesTs": 225414670885,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 1511,
  "speedIndexTs": undefined,
  "timeToFirstByte": 760,
  "timeToFirstByteTs": undefined,
  "totalBlockingTime": 777,
}
`;
